[package]
name = "ano"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
color-eyre = "0.6.2"
fake = { version = "2.9.2", features = ["time"] }
rand = "0.8.5"
serde_json = "1.0.113"
sqlparser = "0.43.1"
thiserror = "1.0.56"
tree-sitter = "0.20.10"

[build-dependencies]
cc="*"
